--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
 
     <title>범쌤과 함께하는 자바스크립트</title>
 </head>
-<body>
+<body class="body">
     
   <article id="RecordCouter" class="RecordDice">
     <h1 class="logo">
